[tool.poetry]
name = "Memora - OpenSource Study Assistant"
version = "0.1.0"
description = ""
authors = ["tejas.gorla@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "*"
langchain = "0.0.153"
tiktoken = "*"
faiss-cpu = "*"
streamlit = "*"
watchdog = "*"
gtts = "*"
openai = "*"
numpy = "*"
pypdf = "*"
docx2txt = "^0.8"


[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
